<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>turtlebot3_autorace_2020</name>
  <version>0.0.0</version>
  <description>ROS 2 meta packages for turtlebot3_autorace_2020</description>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>turtlebot3_autorace_camera</exec_depend>
  <exec_depend>turtlebot3_autorace_detect</exec_depend>
  <exec_depend>turtlebot3_autorace_driving</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
